# REACTOR-Framework-for-Vulkan-

./: .gitignore  .rustfmt.toml  ANALISIS_FINAL_CUBO.md  ANALISIS_MAXIMIZE_PROBLEM.md  ARCHITECTURE.md  ARQUITECTURA_ABC.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  COMO_EJECUTAR.md  Cargo.toml  DEPENDENCIES.md  EMPEZAR_AQUI.md  ESTADO_ACTUAL_REACTOR.md  ESTADO_FINAL.md  ESTADO_RENDERING_FINAL.md  EXPLICACION_VENTANA_NEGRA.md  FASE2_100_COMPLETO.md  FASE2_COMPLETADO.md  FASE2_STATUS.md  FASE3_COMPLETADO.md  FASE4_COMPLETADO.md  FASE5_COMPLETADO.md  FASE6_COMPLETADO.md  FASE7_COMPLETADO.md  FASE8_RENDERING_HELPERS.md  Fases.md  GLFW_INTEGRATION.md  GUIA_COMPLETA.md  HOW_BUILD.md  ISR_PROGRESS.md  ISR_STACK_COMPLETE.md  LICENSE  MEJORAS_APLICADAS.md  PACKAGE_MANAGEMENT.md  PORQUE_PANTALLA_BLANCA.md  PORQUE_PANTALLA_NEGRA.md  REACTOR_FIXED.md  REACTOR_FRAMEWORK_COMPLETO.md  README.md  (+30 more)
Blender_Live/: README.md  empaquetar_addon.py
Editor-REACTOR/: Cargo.toml
Editor-REACTOR/src/: main.rs
META/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  GIT_PREPARATION.md  IMPROVEMENTS_v0.4.0.md  ISR_COMPLETE.md  ISR_IMPLEMENTATION_PLAN.md  ISR_INTEGRATION.md  ISR_STATUS.md  KILLER_TRIANGLE.md  KILLER_TRIANGLE_INTEGRATION.md  META.md  META_REAL.md  PROGRESS_REPORT.md  REACTOR_BASE_LIBRARY.md  REACTOR_COMPLETE_SUMMARY.md  REACTOR_VULKAN_COMPLETE.md  ROADMAP.md  STACK_GPU_OP_VISION.md  v0.5.0_CHECKLIST.md
Test_Game/: .gitignore  CMakeLists.txt  README.md  README_RENDERING.md  SCRIPTS_INFO.md  SOLUCION_FINAL.md  build.bat  compile-shaders.bat  editor_demo.cpp  main.cpp  my_game.cpp  quick-start.bat  run.bat  simple_renderer.cpp  simple_renderer.hpp
Test_Game/shaders/: cube.frag  cube.vert  cube_3d.frag  cube_3d.vert  cube_simple.vert
_legacy_backup/: vulkan_context.rs
assets/: README.md
assets/models/: zombie_basic.glb
cooked_assets/: 0fd3a9851501ec91.ktx2  3055169ddcb2ab87.glb  48f47f131c7d4dbd.glb  49f9f6a655666716.ktx2  6c6f277b0da5f9a5.glb  761eab784ba72c9a.ktx2  86ba5539d4741296.glb  8fc770ad4d988a04.json
cpp/: README.md
cpp/examples/3D/: CMakeLists.txt  README.md  main.cpp  main_basic.cpp  main_class.cpp
cpp/examples/3D/ecs_scene/: main.cpp
cpp/examples/3D/fps_controller/: main.cpp
cpp/examples/3D/frame_graph/: main.cpp
cpp/examples/3D/lighting_showcase/: main.cpp
cpp/examples/3D/multi_object/: main.cpp
cpp/examples/3D/pbr_materials/: main.cpp
cpp/examples/3D/play_mode/: main.cpp
cpp/examples/3D/telemetry_stats/: main.cpp
cpp/examples/hello_cpp/: CMakeLists.txt  main.cpp
cpp/examples/simple_cube/: CMakeLists.txt  main.cpp
cpp/reactor_c_api/: Cargo.toml  cbindgen.toml
cpp/reactor_cpp/: CMakeLists.txt
cpp/reactor_cpp/include/reactor/: application.hpp  core.hpp  reactor.hpp  types.hpp
docs/: FASE3_ASSET_PIPELINE.md  README.md  Tareas.md  architecture.md  cpp-guide.md  cpp_editor_parity_roadmap.md  manual.md  rust-guide.md
examples/: adead_demo.rs  blender_live.rs  cube.rs  free_camera_test.rs  generate_audio.rs  hello_reactor.rs  ibl_bake.rs  inspect_model.rs  obj_loader_demo.rs  physics_camera.rs  quick.rs  sandbox.rs  sandbox_elite.rs  simple_cube.rs  textured_cube.rs  xenofall.rs
examples/cube/: CMakeLists.txt  README.md  main.cpp
examples/cube-render/: CMakeLists.txt  compile-shaders.bat  main.cpp
examples/cube-simple/: CMakeLists.txt  main.cpp
examples/killer-triangle/: CMakeLists.txt  main.cpp
examples/rendering/: CMakeLists.txt  main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp
examples/shared/: camera_input.rs  fps_counter.rs  mod.rs  scene_helpers.rs
examples/stack-gpu-cube/: CMakeLists.txt  README.md  cube_renderer.cpp  cube_renderer.hpp  cube_renderer_isr.cpp  cube_renderer_isr.hpp  debug_overlay.hpp  main.cpp  main_backup.cpp  main_fixed.cpp  main_isr.cpp
examples/stack-gpu-isr/: CMakeLists.txt  main.cpp
examples/stack-gpu-isr-debug/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
reactor-blender-bridge/: README.md
reactor-blender-bridge/blender_addon/: __init__.py  manifest.toml  panel.py  prefs.py
reactor-blender-bridge/proto/: messages.md
reactor-blender-bridge/python/: __init__.py
reactor-blender-bridge/reactor_bridge/: Cargo.toml
reactor-blender-bridge/reactor_bridge/src/: client.rs  lib.rs  protocol.rs  server.rs
reactor/src/: buffer.cpp  command_buffer.cpp  compute_pipeline.cpp  descriptor.cpp  descriptor_manager.cpp  event.cpp  framebuffer.cpp  image.cpp  material.cpp  memory_allocator.cpp  mesh.cpp  pipeline.cpp  pipeline_cache.cpp  query_pool.cpp  reactor.cpp  render_pass.cpp  resource_manager.cpp  sampler.cpp  shader.cpp  swapchain.cpp  sync.cpp  texture.cpp  vulkan_context.cpp  window.cpp
scripts/: cook_assets.sh
shaders/: README.md  bindless_pbr.frag  blender_live_frag.frag  blender_live_frag.spv  blender_live_vert.spv  blender_live_vert.vert  frag.spv  frustum_cull.comp  post_process.frag  post_process.spv  post_process.vert  post_process_frag.spv  post_process_vert.spv  shader.frag  shader.spv  shader.vert  shadow_vert.spv  texture.frag  texture.spv  texture.vert  texture_frag.spv  texture_vert.spv  vert.spv
shaders/aa/: fxaa.frag  fxaa.spv  fxaa.vert  shader_aa.frag  shader_aa.spv  smaa_blend.frag  smaa_blend.spv  smaa_edge.frag  smaa_edge.spv
shaders/compute/: cull.spv  light_cull.spv
shaders/core/: shader.frag  texture.frag
src/: app.rs  base_shader.rs  buffer.rs  builtin_shaders.rs  cpu_detector.rs  ecs.rs  gpu_detector.rs  input.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  ray_tracing.rs  reactor.rs  reactorapp.rs  resolution_detector.rs  scene.rs  swapchain.rs  vertex.rs  vulkan_context.rs
templates/starter/: .gitignore  CMakeLists.txt  README.md  build.bat  diagnose.bat  run.bat  setup.bat
templates/starter/assets/: README.md
templates/starter/src/: main.cpp
xenofall/: app_lifecycle.rs  audio.rs  cards.rs  cards_runtime.rs  combat.rs  constants.rs  core.rs  enemies.rs  helpers.rs  main.rs  mod.rs  player.rs  render_lab.rs  scene.rs  types.rs  ui.rs  vfx.rs  visual_features.rs  waves.rs  world.rs
(+426 files in other folders)
