[package]
name = "reactor"
version = "1.1.0"
edition = "2021"
description = "Zero-overhead Vulkan framework — control total, API de 1 línea"
license = "MIT"
repository = "https://github.com/AndreeSalazar/REACTOR-Framework-for-Vulkan-"
keywords = ["vulkan", "gamedev", "graphics", "framework", "rendering"]
categories = ["game-engines", "graphics::gpu"]
readme = "README.md"
authors = ["Eddi Andreé Salazar Matos"]

[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glam = "0.30.9"
gltf = "1.4"
gpu-allocator = "0.28.0"
image = "0.25"
log = "0.4.29"
raw-window-handle = "0.6.2"
winit = "0.30.12"

[[example]]
name = "cube"
path = "examples/cube.rs"

[[example]]
name = "sandbox"
path = "examples/sandbox.rs"

[[example]]
name = "textured_cube"
path = "examples/textured_cube.rs"

[[example]]
name = "physics_camera"
path = "examples/physics_camera.rs"

[[example]]
name = "obj_loader_demo"
path = "examples/obj_loader_demo.rs"

[[example]]
name = "quick"
path = "examples/quick.rs"
